[fix] Long submenu titles will now wrap.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -176,6 +176,7 @@
 .super-group-menu ul ul li {
 	display: block !important; /* Override display: table-cell for submenus on greedy nav */
 	float: none;
+	white-space: normal !important; /* Allow submenu items to wrap */
 }
 .super-group-menu ul ul li a {
 	padding: 5px 15px;
